--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "desasser <desasser79@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "graphql": "^16.2.0",
+    "graphql-request": "^3.7.0",
     "gray-matter": "^4.0.3",
     "next": "^12.0.7",
     "react": "^17.0.2",
